--- a/app-to-phone-js/client_js.html
+++ b/app-to-phone-js/client_js.html
@@ -23,7 +23,7 @@
     const hangupButton = document.getElementById("hangup");
     const statusElement = document.getElementById("status");
     new NexmoClient({ debug: true })
-      .login(USER_JWT)
+      .createSession(USER_JWT)
       .then(app => {
         callButton.addEventListener("click", event => {
           event.preventDefault();
